[package]
name = "quipu"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54.1", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
futures = "0.3"
async-std = { version = "1.13.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }



