[package]
name = "quipu"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = { version =  "0.1.40", features = ["max_level_trace", "release_max_level_info"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
